# ds2022

Project/: .gitignore  CMakeLists.txt  Makefile.file_transfer  README.md  compile_commands.json  file_transfer.h  file_transfer.x  file_transfer_client.c  file_transfer_clnt.c  file_transfer_server.c  file_transfer_svc.c  file_transfer_xdr.c
